Added a configuration to compile RsaTest to a native image without